Changelog:
==========

1.90.0 - 2013-??-??

    General:
        - A lot of backports from UMS (thanks, all UMS developers!)
        - More accurate checks for reference frames count to allow more videos to be remuxed instead of transcoding

    Engines:
        - FFmpeg Video and FFmpeg Web Video:
            - General improvements of usability and stability
            - Support for lossless video remuxing if supported by renderer
            - Support for AC-3 and DTS audio tracks remuxing
            - Support for external SRT and SSA/ASS subtitles
            - Support for auto charset detection of non UTF-8 external subtitles
        - tsMuxeR:
            - Regression: restore the pre-1.82.0 compatibility logic
        - VLC Web Video:
            - Fix NPE

    Renderers:
        - Xbox 360: improved quality
        - Improved Sony Blu-ray Player support (thanks, skeptical)
        - Added renderer profiles (thanks, UMS developers):
            - KalemSoft Media Player
            - Sony Bravia EX620 series TVs
            - Netgear NeoTV
            - Onkyo TX-NR717
            - Sharp Aquos TVs
            - Showtime 4 PS3 homebrew player
            - Sony Home Theatre Systems
            - Telstra T-Box
            - VideoWeb TV
            - Vizio Smart TV
            - Yamaha RX-V3900

    Transcode folder:
        - Add entries for audio files
        - Add missing entries for video files
        - Add entries for web video and web audio files
        - Allow the chapter folder prefix to be localized
        - Hide chapter folders if the duration of the video is less than the chapter length

    Misc:
        - Logging improvements

    Misc:
        - Send thumbnails properly to Samsung 2012 ES and EH models (thanks, dmitche3!)


1.82.0 - 2013-06-03

    Engines:
        - dcraw Thumbnailer:
            - Fix image transcoding
            - Add support for more extensions
        - FFmpeg: