@@ -390,7 +390,7 @@ folders =
 # The exact list of available engines depends on the server.
 # Warning: the value can be empty, which overrides the default value and will
 # disable all engines.
-# Default: "mencoder,avsmencoder,tsmuxer,ffmpegvideo,vlctranscoder,ffmpegaudio,mplayeraudio,tsmuxeraudio,ffmpegwebvideo,vlcvideo,mencoderwebvideo,vlcwebvideo,mplayervideodump,mplayerwebaudio,vlcaudio,ffmpegdvrmsremux,rawthumbs"
+# Default: "mencoder,avsmencoder,tsmuxer,ffmpegvideo,vlctranscoder,ffmpegaudio,tsmuxeraudio,ffmpegwebvideo,vlcvideo,mencoderwebvideo,vlcwebvideo,vlcaudio,ffmpegdvrmsremux,rawthumbs"
 # engines =
 
 # ----------------------------------------------------------------------------
