@@ -1703,14 +1703,11 @@ public class PmsConfiguration {
 				"ffmpegvideo",
 				"vlctranscoder", // (VLCVideo) TODO: rename "vlcvideo"
 				"ffmpegaudio",
-				"mplayeraudio",
 				"tsmuxeraudio",
 				"ffmpegwebvideo",
 				"vlcwebvideo", // (VLCWebVideo)
 				"vlcvideo", // (VideoLanVideoStreaming) TODO (legacy web video engine): remove
 				"mencoderwebvideo",
-				"mplayervideodump",
-				"mplayerwebaudio",
 				"vlcaudio", // (VideoLanAudioStreaming) TODO (legacy web audio engine): remove
 				"ffmpegdvrmsremux",
 				"rawthumbs"
