@@ -1,83 +1,0 @@
-/*
- * PS3 Media Server, for streaming any medias to your PS3.
- * Copyright (C) 2008  A.Brochard
- *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; version 2
- * of the License only.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
- */
-package net.pms.encoders;
-
-import net.pms.configuration.PmsConfiguration;
-import net.pms.dlna.DLNAMediaInfo;
-import net.pms.dlna.DLNAResource;
-import net.pms.formats.Format;
-import net.pms.io.OutputParams;
-import net.pms.io.ProcessWrapper;
-import net.pms.util.PlayerUtil;
-
-import javax.swing.*;
-import java.io.IOException;
-
-public class MPlayerWebAudio extends MPlayerAudio {
-	public static final String ID = "mplayerwebaudio";
-
-	public MPlayerWebAudio(PmsConfiguration configuration) {
-		super(configuration);
-	}
-
-	@Override
-	public JComponent config() {
-		return null;
-	}
-
-	@Override
-	public PlayerPurpose getPurpose() {
-		return PlayerPurpose.AUDIO_WEB_STREAM_PLAYER;
-	}
-
-	@Override
-	public String id() {
-		return "mplayerwebaudio";
-	}
-
-	@Override
-	public ProcessWrapper launchTranscode(
-		DLNAResource dlna,
-		DLNAMediaInfo media,
-		OutputParams params
-	) throws IOException {
-		params.minBufferSize = params.minFileSize;
-		params.secondread_minsize = 100000;
-		params.waitbeforestart = 8000;
-		return super.launchTranscode(dlna, media, params);
-	}
-
-	@Override
-	public String name() {
-		return "MPlayer Web Audio";
-	}
-
-	@Override
-	public boolean isTimeSeekable() {
-		return false;
-	}
-
-	/**
-	 * {@inheritDoc}
-	 */
-	@Override
-	public boolean isCompatible(DLNAResource resource) {
-		return PlayerUtil.isWebAudio(resource);
-	}
-}
